# NSAC_SCRAPER

./: .gitignore  .pre-commit-config.yaml  README.md  agent.md  app.py  config.json  history.json  index.html  matrix.html  pyproject.toml  scraper.py  teams.json
src/nsac_scraper/: __init__.py  app.py  scraper.py
static/js/: index.js  matrix.js
templates/: index.html  matrix.html
tests/: test_app.py  test_scraper.py
