[project]
name = "nsac-scraper"
version = "0.1.0"
description = "A web scraper and dashboard to track team participation in the NASA Space Apps Challenge."
authors = [
    { name = "berniehans", email = "95459612+berniehans@users.noreply.github.com" }
]
dependencies = [
    "playwright>=1.55.0",
    "requests>=2.32.5",
    "flask>=3.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black",
    "isort",
    "ruff",
]

[tool.rye.scripts]
review = { chain = [
    "black .",
    "isort .",
    "ruff check . --fix"
] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nsac_scraper"]
