[project]
name = "nsac-scraper"
version = "0.1.0"
description = "A web scraper and dashboard to track team participation in the NASA Space Apps Challenge."
authors = [
    { name = "berniehans", email = "95459612+berniehans@users.noreply.github.com" }
]
dependencies = [
    "playwright>=1.55.0",
    "requests>=2.32.5",
    "flask>=3.1.2",
    "tenacity>=8.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black",
    "isort",
    "ruff",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
]

[tool.rye.scripts]
review = { chain = [
    "black .",
    "isort .",
    "ruff check . --fix"
] }
test = "python -m pytest --cov=src"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nsac_scraper"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
